--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -1,6 +1,22 @@
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/mbplus
+    username: rrromanm
+    password: ""
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+
+  sql:
+    init:
+      mode: never
+
 server:
   port: 8080
-
-spring:
-  application:
-    name: mb-plus-levante-backend
