--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-dropzone": "^14.4.0",
+    "react-hook-form": "^7.71.1",
     "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.4.0"
   },
