--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.564.0",
     "next": "^16.1.6",
     "next-cloudinary": "^6.17.5",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
