--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -5,6 +5,10 @@ spring:
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
+    hikari:
+      data-source-properties:
+        prepareThreshold: 0
+
   jpa:
     hibernate:
       ddl-auto: update
